--- a/app/views/home/_signed_in_homepage.html.haml
+++ b/app/views/home/_signed_in_homepage.html.haml
@@ -34,7 +34,9 @@
             %div(ng-switch-when='Like_create')
               %div(ng-include src="'stream_views/like_create.html'")
             %div(ng-switch-when='Upload_create')
-              %div(ng-include src="'stream_views/upload_create.html'")              
+              %div(ng-include src="'stream_views/upload_create.html'")
+            %div(ng-switch-when='Vote_create')
+              %div(ng-include src="'stream_views/vote_create.html'")                            
           / = render "/activity_stream/{{stream.trackable_type}}/{{stream.action}}"
 
     .span2
