--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1839,7 +1839,67 @@ csingredienteditpair
   .no-margin-padding
     padding: 0px
     margin: 0px
- 
+
+  .social-group
+    white-space: nowrap
+    overflow: visible
+    .btn-primary
+      width: 49%
+      margin-right: 0px
+
+      &:first-child
+        margin-right: 4px
+
+    .social-popover-triangle
+      display: none
+    .social-popover
+      @include boxsizing
+      .share-text
+        display: none
+      left:  auto
+      right: -2px
+      top: auto
+      bottom: -46px
+      height: auto
+      width: 460px
+      padding-right: 6px
+      .btn
+        i
+          border-width: 10px
+          font-size:  100%
+        font-size:  80%
+
+    .spe-hide-setup
+      height: 42px
+      transition: 200ms ease all
+      &.spe-hide-start
+        height: 0
+
+    .spe-show-setup
+      height: 0
+      transition: 350ms cubic-bezier(0.175, 0.885, 0.32, 1.275) all
+      &.spe-show-start
+        height: 42px
+
+@media(max-width: 512px)
+  .social-group
+
+    .social-popover
+      width: 300px
+      left:  auto
+      right: -2px
+      top: 34px
+      bottom: auto
+      white-space: normal
+      .btn
+        width: 45px !important
+        height:  35px
+        padding:  0px 0 0 0
+        text-align: left
+        font-size: 25px
+        span
+          display: none
+
 /* Landscape phones and down */
 @media (max-width: 480px)
   #hero-container
@@ -1899,6 +1959,8 @@ csingredienteditpair
       line-height: 16px
     .input-signup-email
       width: 50%
+
+
 
 /* Global on-select highlighting */
 
