--- a/app/views/stream_views/vote_create.html.haml
+++ b/app/views/stream_views/vote_create.html.haml
@@ -1,4 +1,3 @@
-{{stream.trackable.vote}}
 .stream-item
   .stream-item-header
     .stream-item-header-user
@@ -13,30 +12,16 @@
     / = link_to media_object do
     /   = image_tag 'http://placehold.it/160x90/cccccc/cccccc&text=ChefSteps'
   .stream-item-bottom
-    / %p= "#{time_ago_in_words(event.created_at)} ago"
-    / - if media_object.votes_count == 1
-    /   .stream-item-media1
-    /     .stream-item-media1-user
-    /       = link_to user_profile_path(event.user) do
-    /         = image_tag filepicker_circle_image(event.user.image_id)
-    /     .stream-item-media1-content
-    /       = link_to event.user.name, user_profile_path(event.user)
-    /       = "voted for #{media_object.title}."
-    / - else
-    /   .stream-item-media2
-    /     .stream-item-media2-users
-    /       - media_object.votes.each do |vote|
-    /         = link_to user_profile_path(vote.user) do
-    /           = image_tag filepicker_circle_image(vote.user.image_id)
-    /     .stream-item-media2-content
-    /       - case media_object.votes_count
-    /       - when 2
-    /         = link_to media_object.votes.first.user.name, user_profile_path(media_object.votes.first.user)
-    /         = "and"
-    /         = link_to media_object.votes.second.user.name, user_profile_path(media_object.votes.second.user)
-    /         = "voted for #{media_object.title}."
-    /       - else
-    /         = link_to media_object.votes.first.user.name, user_profile_path(media_object.votes.first.user)
-    /         = "and"
-    /         = link_to media_object.votes.second.user.name, user_profile_path(media_object.votes.second.user)
-    /         = "and #{media_object.votes_count - 2} more voted for #{media_object.title}."
+    %p
+      {{stream.created_at|date:'MMM d, yyyy @ h:mma'}}
+    .stream-item-media2
+      .stream-item-media2-content
+        %div(ng-switch="stream.trackable.vote.votable.votes_count")
+          %div(ng-switch-when='1')
+            1 Vote
+          %div(ng-switch-default)
+            {{stream.trackable.vote.votable.votes_count}} Votes
+      .stream-item-media2-users
+        / %span(ng-repeat="user in stream.trackable.vote.votable.vote_users")
+        /   %a(ng-href="/profiles/{{user.slug}}")
+        /     %img(ng-src="{{userImageUrl(user.image_id)}}")
