--- a/app/assets/stylesheets/stream.css.sass
+++ b/app/assets/stylesheets/stream.css.sass
@@ -18,6 +18,10 @@
   position: relative
   .stream-item
     margin-bottom: 40px
+    float: left
+    width: 100%
+    border: 1px solid $light-gray
+    padding: 10px
     @include boxsizing
     .stream-item-header
       margin-bottom: 10px
