[stream] load more button

--- a/app/views/home/_signed_in_homepage.html.haml
+++ b/app/views/home/_signed_in_homepage.html.haml
@@ -36,6 +36,6 @@
             %div(ng-switch-when='Vote_create')
               %div(ng-include src="'stream_views/vote_create.html'")
 
-        %a.btn.btn-primary(ng-click="loadMore()")
+        %a.btn.btn-primary.btn-large(ng-click="loadMore()")
           Load More
     .span2
