--- a/app/views/layouts/_social_buttons.html.haml
+++ b/app/views/layouts/_social_buttons.html.haml
@@ -4,24 +4,23 @@
   -else
     .section-small.social-group(ng-controller="SocialButtonsController")
       = render 'shared/like_button', likeable_object: media_object
-      .btn.btn-primary.relative(ng-click="expandSocial=!expandSocial")
-        .icon-share
-        Share
+      .btn.btn-primary.relative
+        .btn-share(ng-click="expandSocial=!expandSocial")
+          .icon-share
+          Share
         .social-popover-triangle(ng-show="expandSocial" ng-animate="'spe'" )
         .social-popover(ng-show="expandSocial" ng-animate="'spe'" style="display: none;")
           .contents
             .share-text
               Share this with your friends!
-            = link_to "https://twitter.com/intent/tweet?text=I love this: #{media_object.title} from @ChefSteps!&url=#{ url_encode(current_url(request))}", class: 'btn btn-secondary btn-social btn-social-twitter', onclick: "mixpanel.track('Share', { 'Network': 'Twitter'});" do
+            .btn.btn-secondary.btn-social.btn-social-twitter(ng-click="shareTwitter(\'#{media_object.title}\', \'#{url}\')")
               = render 'layouts/social_button', icon: "twitter", networkFriendlyName: "Twitter"
-            = link_to 'javascript:void(0);', class: 'btn btn-secondary btn-social btn-social-facebook social-action', onclick: "mixpanel.track('Share', { 'Network': 'Facebook'});  window.open('https://www.facebook.com/sharer/sharer.php?u='+encodeURIComponent(location.href),  'facebook-share-dialog', 'width=626,height=436,top=100,left=100'); return false;" do
+            .btn.btn-secondary.btn-social.btn-social-facebook(ng-click="shareFacebook(\'#{url}\')")
               = render 'layouts/social_button', icon: "facebook", networkFriendlyName: "Facebook"
-            = link_to "https://plus.google.com/share?url=#{current_url(request)}", onclick: "mixpanel.track('Share', { 'Network': 'Google Plus'}); javascript:window.open(this.href,
-            '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;", class: 'btn btn-secondary btn-social btn-social-gplus' do
+            .btn.btn-secondary.btn-social.btn-social-gplus(ng-click="shareGooglePlus(\'#{url}\')")
               = render 'layouts/social_button', icon: "google-plus", networkFriendlyName: "Google+"
             - if media_object.featured_image
-              = link_to "http://pinterest.com/pin/create/button/?url=#{current_url(request)}&media=#{filepicker_hero_image(media_object.featured_image)}", onclick: "mixpanel.track('Share', { 'Network': 'Pinterest'}); javascript:window.open(this.href,
-              '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;", class: 'btn btn-secondary btn-social btn-social-pinterest' do
+              .btn.btn-secondary.btn-social.btn-social-pinterest(ng-click="sharePinterest(\'#{url}\', \'#{filepicker_hero_image(media_object.featured_image)}\')")
                 = render 'layouts/social_button', icon: "pinterest", networkFriendlyName: "Pinterest"
             %a{href: "mailto:?subject=#{media_object.title.html_safe}%20from%20ChefSteps.com&body=I%20thought%20you%20might%20like%20this:%20#{ url_encode(current_url(request))}", target: "_blank", id: "email-share",class: "btn btn-social btn-social-email", onclick: "mixpanel.track('Share', { 'Network': 'Email'});"}
               = render 'layouts/social_button', icon: "envelope", networkFriendlyName: "Email"
