--- a/app/assets/stylesheets/projects.css.sass
+++ b/app/assets/stylesheets/projects.css.sass
@@ -1,6 +1,7 @@
 @import 'mixins'
 
-.project-description
-  &:first-line
-    font-size: 24px
-    line-height: 30px
+.project
+  .project-description
+    &:first-line
+      font-size: 24px
+      line-height: 30px
