--- a/app/views/assemblies/projects_show.html.haml
+++ b/app/views/assemblies/projects_show.html.haml
@@ -1,3 +1,8 @@
+- content_for :title, "#{@project.title.html_safe} - Recipe Project"
+- content_for :description, @project.description != "" ? @project.description.html_safe : @project.title.html_safe
+- content_for :canonical_link, project_url(@project) if @project.id
+- content_for :keywords, @project.assembly_inclusions.map(&:includable).map(&:title).join(',')
+
 .container.project
   %h1= @project.title
   .row
