[uploads] seo and title

--- a/app/views/uploads/show.html.haml
+++ b/app/views/uploads/show.html.haml
@@ -1,3 +1,8 @@
+- content_for :title, "#{@upload.title.html_safe} - Photo"
+- content_for :description, @upload.notes != "" ? @upload.notes.html_safe : @upload.title.html_safe
+- content_for :canonical_link, upload_url(@upload) if @upload.id
+- content_for :keywords, @upload.title.split(' ').join(',')
+
 .container
   .row
     .span12
