--- a/app/views/home/_signed_in_homepage.html.haml
+++ b/app/views/home/_signed_in_homepage.html.haml
@@ -10,6 +10,28 @@
 
   .row
     .span8
+      %h2 Courses
+      - @courses.each.with_index do |course, index|
+        - if index == 0
+          %h3= course.title
+          = image_tag filepicker_stream_image(course.featured_image)
+          = course.description
+        -else
+          .row
+            .span4
+              = image_tag filepicker_stream_image(course.featured_image)
+            .span4
+              %h4= course.title
+              = course.description
+      %h2 Projects
+      %h3 Start a new Project
+      - @projects.each.with_index do |project, index|
+        .row
+          .span4
+            = image_tag filepicker_stream_image(project.featured_image)
+          .span4
+            %h4= project.title
+            = project.description
     .span4
       %h2 Activity Stream
       / .stream
