--- a/app/assets/stylesheets/voting.css.sass
+++ b/app/assets/stylesheets/voting.css.sass
@@ -136,6 +136,13 @@
         width: 9px
         height: 9px
 
+.voting-spinner
+  i
+    width: 100%
+    text-align: center
+    font-size: 60px
+    color: $orange
+    margin: 100px 0px 2000px
 
 @media (min-width: 481px) and (max-width: 979px)
   .poll-item
