--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1053,6 +1053,9 @@ a:hover
   width: 40px
   margin: 0 2px
 
+.btn-poll-comments
+  width: 200px
+
 .btn-social
   margin: 0 2px
   background-color: white
