--- a/app/assets/stylesheets/voting.css.sass
+++ b/app/assets/stylesheets/voting.css.sass
@@ -48,6 +48,11 @@
   .poll-item-details-btn
     &:hover
       cursor: pointer
+
+  .social-group
+    > .btn
+      margin-top: 10px
+
 .poll-item-sharing
   margin-top: 15px
   width: 9%
@@ -105,6 +110,8 @@
 .poll-item-voters
   float: left
   width: 100%
+  margin-top: 10px
+  clear: both
   .poll-item-voter
     position: relative
     float: left
