--- a/app/views/layouts/_social_buttons.html.haml
+++ b/app/views/layouts/_social_buttons.html.haml
@@ -1,27 +1,7 @@
--ab_test("social_share", "old", "newNoPostPlay", "newWithPostPlay") do |name|
-  -if name == "old"
+-ab_test("social_share", "old", "newNoPostPlay", "newWithPostPlay") do |split_name|
+  -if split_name == "old"
     = render "layouts/old_social_buttons", media_object: media_object
   -else
-    .section-small.social-group(ng-controller="SocialButtonsController" ng-init="split=\'#{name}\'")
+    .section-small.social-group
       = render 'shared/like_button', likeable_object: media_object
-      .btn.btn-primary.relative
-        .btn-share(ng-click="expandSocial=!expandSocial")
-          .icon-share
-          Share
-        .social-popover-triangle(ng-show="expandSocial" ng-animate="'spe'" )
-        .social-popover(ng-show="expandSocial" ng-animate="'spe'" style="display: none;")
-          .contents
-            .share-text
-              Share this with your friends!
-            .btn.btn-secondary.btn-social.btn-social-twitter(ng-click="shareTwitter(\'#{media_object.title}\', \'#{url}\')")
-              = render 'layouts/social_button', icon: "twitter", networkFriendlyName: "Twitter"
-            .btn.btn-secondary.btn-social.btn-social-facebook(ng-click="shareFacebook(\'#{url}\')")
-              = render 'layouts/social_button', icon: "facebook", networkFriendlyName: "Facebook"
-            .btn.btn-secondary.btn-social.btn-social-gplus(ng-click="shareGooglePlus(\'#{url}\')")
-              = render 'layouts/social_button', icon: "google-plus", networkFriendlyName: "Google+"
-            - if media_object.featured_image
-              .btn.btn-secondary.btn-social.btn-social-pinterest(ng-click="sharePinterest(\'#{url}\', \'#{filepicker_hero_image(media_object.featured_image)}\')")
-                = render 'layouts/social_button', icon: "pinterest", networkFriendlyName: "Pinterest"
-            .btn.btn-secondary.btn-social.btn-social-email(ng-click="shareEmail(\'#{media_object.title}\', \'#{url}\')")
-              = render 'layouts/social_button', icon: "envelope", networkFriendlyName: "Email"
-
+      = render 'layouts/share_button', media_object: media_object, url: url, split_name: split_name
