--- a/app/views/layouts/_social_buttons.html.haml
+++ b/app/views/layouts/_social_buttons.html.haml
@@ -4,4 +4,4 @@
   -else
     .section-small.social-group
       = render 'shared/like_button', likeable_object: media_object
-      = render 'layouts/share_button', media_object: media_object, url: url, split_name: split_name
+      = render 'layouts/share_button', shareSuggestText: shareSuggestText, split_name: split_name
