--- a/app/views/home/_signed_in_homepage.html.haml
+++ b/app/views/home/_signed_in_homepage.html.haml
@@ -10,28 +10,33 @@
 
   .row
     .span8
-      %h2.home-header Courses
-      - @courses.each.with_index do |course, index|
-        - if index == 0
-          %h3= course.title
-          = image_tag filepicker_stream_image(course.featured_image)
-          = course.short_description
-        -else
-          .row
-            .span4
+      .home-section
+        %h2.home-header Courses
+        - @courses.each.with_index do |course, index|
+          - if index == 0
+            .home-featured-item
+              %h3= course.title
               = image_tag filepicker_stream_image(course.featured_image)
-            .span4
-              %h4= course.title
-              = course.short_description
-      %h2.home-header Projects
-      %h3 Start a new Project
-      - @projects.each.with_index do |project, index|
-        .row
-          .span4
-            = image_tag filepicker_stream_image(project.featured_image)
-          .span4
-            %h4= project.title
-            = project.description
+              .section
+                = course.short_description
+          -else
+            .home-standard-item
+              .home-standard-item-image
+                = image_tag filepicker_stream_image(course.featured_image)
+              .home-standard-item-text
+                %h4= course.title
+                = course.short_description
+      .home-section
+        %hr
+      .home-section
+        %h2.home-header Projects
+        - @projects.each.with_index do |project, index|
+          .home-standard-item
+            .home-standard-item-image
+              = image_tag filepicker_stream_image(project.featured_image)
+            .home-standard-item-text
+              %h4= project.title
+              = project.description
     .span4
       %h2.home-header Activity Stream
       / .stream
