[stream] dialog update

--- a/app/assets/stylesheets/stream.css.sass
+++ b/app/assets/stylesheets/stream.css.sass
@@ -11,6 +11,13 @@
     border: 1px solid $light-gray
     padding: 10px
     @include boxsizing
+    .stream-item-dialogue
+      img
+        float: left
+      h4
+        margin-left: 35px
+        margin-top: 0px
+        margin-bottom: 5px
     .stream-item-header
       margin-bottom: 10px
       float: left
