--- a/app/views/stream_views/comment_create.html.haml
+++ b/app/views/stream_views/comment_create.html.haml
@@ -2,7 +2,7 @@
   .stream-item-header
     .stream-item-header-user
       %div(ng-show="stream.trackable.comment.commentable.user")
-        %a(ng-href="/profiles/{{stream.trackable.comment.commentable.user}}")
+        %a(ng-href="/profiles/{{stream.trackable.comment.commentable.user.slug}}")
           %img(ng-src="{{userImageUrl(stream.trackable.comment.commentable.user.image_id)}}")
           %h4
             {{stream.trackable.comment.commentable.user.name}}
