--- a/app/views/stream_views/like_create.html.haml
+++ b/app/views/stream_views/like_create.html.haml
@@ -1,14 +1,26 @@
 .stream-item
-  .stream-item-header
-    .stream-item-header-user
-      %div(ng-show="stream.trackable.like.likeable.user")
-        %a(ng-href="/profiles/{{stream.trackable.like.likeable.user}}")
-          %img(ng-src="{{userImageUrl(stream.trackable.like.likeable.user.image_id)}}")
-          %h4
-            {{stream.trackable.like.likeable.user.name}}
-    .stream-item-header-title
-      %h3
-        {{stream.trackable.like.likeable.title}}  
+  .stream-item-dialogue
+    %img(ng-src="{{userImageUrl(stream.user.image_id)}}")
+    %h4
+      %a(ng-href="/profiles/{{stream.user.slug}}")
+        {{stream.user.name}}
+      liked
+      %a(ng-href="/profiles/{{stream.trackable.like.likeable.user.slug}}")
+        {{stream.trackable.like.likeable.user.name}}'s
+      {{stream.trackable.like.likeable.title}}
+      photo.
+      %small
+        {{stream.created_at|date:'MMM d, yyyy @ h:mma'}}
+  / .stream-item-header
+  /   .stream-item-header-user
+  /     %div(ng-show="stream.trackable.like.likeable.user")
+  /       %a(ng-href="/profiles/{{stream.trackable.like.likeable.user.slug}}")
+  /         %img(ng-src="{{userImageUrl(stream.trackable.like.likeable.user.image_id)}}")
+  /         %h4
+  /           {{stream.trackable.like.likeable.user.name}}
+  /   .stream-item-header-title
+  /     %h3
+  /       {{stream.trackable.like.likeable.title}}  
   .stream-item-top
     %a(ng-href="{{stream.trackable.like.likeable.path}}")
       %img(ng-src="{{mediaObjectImageUrl(stream.trackable.like.likeable.featured_image)}}")
