--- a/app/views/stream_views/upload_create.html.haml
+++ b/app/views/stream_views/upload_create.html.haml
@@ -2,7 +2,7 @@
 .stream-item
   .stream-item-header
     .stream-item-header-user
-      %a(ng-href="{{stream.trackable.upload.user}}")
+      %a(ng-href="/profiles/{{stream.trackable.upload.user.slug}}")
         %img(ng-src="{{userImageUrl(stream.trackable.upload.user.image_id)}}")
         %h4
           {{stream.trackable.upload.user.name}}
