--- a/app/views/stream_views/like_create.html.haml
+++ b/app/views/stream_views/like_create.html.haml
@@ -2,15 +2,26 @@
   .stream-item-dialogue
     %img(ng-src="{{userImageUrl(stream.user.image_id)}}")
     %h4
-      %a(ng-href="/profiles/{{stream.user.slug}}")
-        {{stream.user.name}}
-      liked
-      %a(ng-href="/profiles/{{stream.trackable.like.likeable.user.slug}}")
-        {{stream.trackable.like.likeable.user.name}}'s
-      {{stream.trackable.like.likeable.title}}
-      photo.
+      %div(ng-switch="stream.trackable.like.likeable_type")
+        %div(ng-switch-when='Upload')
+          %a(ng-href="/profiles/{{stream.user.slug}}")
+            {{stream.user.name}}
+          liked
+          %a(ng-href="/profiles/{{stream.trackable.like.likeable.user.slug}}")
+            {{stream.trackable.like.likeable.user.name}}'s
+          {{stream.trackable.like.likeable.title}}
+          photo.
+        %div(ng-switch-when='Activity')
+          %a(ng-href="/profiles/{{stream.user.slug}}")
+            {{stream.user.name}}
+          liked
+          %a(ng-href="{{stream.trackable.like.likeable.path}}")
+            {{stream.trackable.like.likeable.title}}.
       %small
         {{stream.created_at|date:'MMM d, yyyy @ h:mma'}}
+  .stream-item-image
+    %a(ng-href="{{stream.trackable.like.likeable.path}}")
+      %img(ng-src="{{mediaObjectImageUrl(stream.trackable.like.likeable.featured_image)}}")
   / .stream-item-header
   /   .stream-item-header-user
   /     %div(ng-show="stream.trackable.like.likeable.user")
@@ -21,20 +32,20 @@
   /   .stream-item-header-title
   /     %h3
   /       {{stream.trackable.like.likeable.title}}  
-  .stream-item-top
-    %a(ng-href="{{stream.trackable.like.likeable.path}}")
-      %img(ng-src="{{mediaObjectImageUrl(stream.trackable.like.likeable.featured_image)}}")
-  .stream-item-bottom
-    %p
-      {{stream.created_at|date:'MMM d, yyyy @ h:mma'}}
-    .stream-item-media2
-      .stream-item-media2-content
-        %div(ng-switch="stream.trackable.like.likeable.likes_count")
-          %div(ng-switch-when='1')
-            1 Like
-          %div(ng-switch-default)
-            {{stream.trackable.like.likeable.likes_count}} Likes
-      .stream-item-media2-users
-        %span(ng-repeat="user in stream.trackable.like.likeable.like_users")
-          %a(ng-href="/profiles/{{user.slug}}")
-            %img(ng-src="{{userImageUrl(user.image_id)}}")
+  / .stream-item-top
+  /   %a(ng-href="{{stream.trackable.like.likeable.path}}")
+  /     %img(ng-src="{{mediaObjectImageUrl(stream.trackable.like.likeable.featured_image)}}")
+  / .stream-item-bottom
+  /   %p
+  /     {{stream.created_at|date:'MMM d, yyyy @ h:mma'}}
+  /   .stream-item-media2
+  /     .stream-item-media2-content
+  /       %div(ng-switch="stream.trackable.like.likeable.likes_count")
+  /         %div(ng-switch-when='1')
+  /           1 Like
+  /         %div(ng-switch-default)
+  /           {{stream.trackable.like.likeable.likes_count}} Likes
+  /     .stream-item-media2-users
+  /       %span(ng-repeat="user in stream.trackable.like.likeable.like_users")
+  /         %a(ng-href="/profiles/{{user.slug}}")
+  /           %img(ng-src="{{userImageUrl(user.image_id)}}")
